# stm32-exploration

./: .gitattributes  .gitignore  LICENSE  README.md
07-rust/stm32f0x1/stm32f0x1_pac/: Cargo.toml  STM32F0x1.svd
07-rust/stm32f0x1/stm32f0x1_pac/src/: can.rs  crc.rs  dma1.rs  lib.rs  rtc.rs  syscfg_comp.rs  tim1.rs  tim14.rs  tsc.rs
07-rust/stm32f0x1/stm32f0x1_pac/src/adc/: ccr.rs  cfgr2.rs  cr.rs  ier.rs  isr.rs  smpr.rs  tr.rs
07-rust/stm32f0x1/stm32f0x1_pac/src/can/: can_btr.rs  can_esr.rs  can_fa1r.rs  can_ffa1r.rs  can_fm1r.rs  can_fmr.rs  can_fs1r.rs  can_ier.rs  can_mcr.rs  can_msr.rs  can_rdh0r.rs  can_rdh1r.rs  can_rdl0r.rs  can_rdl1r.rs  can_rdt0r.rs  can_rdt1r.rs  can_rf0r.rs  can_rf1r.rs  can_ri0r.rs  can_ri1r.rs  can_tdh0r.rs  can_tdh1r.rs  can_tdh2r.rs  can_tdl0r.rs  can_tdl1r.rs  can_tdl2r.rs  can_tdt0r.rs  can_tdt1r.rs  can_tdt2r.rs  can_ti0r.rs  can_ti1r.rs  can_ti2r.rs  can_tsr.rs  f0r2.rs  f11r1.rs  f11r2.rs  f12r1.rs  f12r2.rs  f13r1.rs  f13r2.rs  (+22 more)
07-rust/stm32f0x1/stm32f0x1_pac/src/crc/: cr.rs  init.rs
07-rust/stm32f0x1/stm32f0x1_pac/src/dac/: cr.rs
07-rust/stm32f0x1/stm32f0x1_pac/src/dma1/: ccr1.rs  ccr2.rs  ccr3.rs  ccr4.rs  ccr5.rs  ccr6.rs  ccr7.rs  ifcr.rs  isr.rs
07-rust/stm32f0x1/stm32f0x1_pac/src/exti/: emr.rs  ftsr.rs  imr.rs  pr.rs  rtsr.rs  swier.rs
07-rust/stm32f0x1/stm32f0x1_pac/src/flash/: acr.rs  ar.rs  cr.rs  keyr.rs  obr.rs  sr.rs
07-rust/stm32f0x1/stm32f0x1_pac/src/gpioa/: brr.rs  moder.rs
07-rust/stm32f0x1/stm32f0x1_pac/src/gpiof/: lckr.rs  moder.rs  otyper.rs
07-rust/stm32f0x1/stm32f0x1_pac/src/i2c1/: cr1.rs  (+2 more)
(+367 files in other folders)
